Optimize log draining condition in Worker class
The modification ensures the worker thread will only begin draining logs when either the threshold time has elapsed or if the accumulated logs exceed max size. Importantly, the log list is now verified to be non-empty before entering the draining process. This fosters improved efficiency by avoiding unnecessary log draining processes when there are no logs to drain.